@@ -5,9 +5,8 @@
 package com.jyuzawa.onnxruntime;
 
 import com.jyuzawa.onnxruntime_extern.OrtROCMProviderOptions;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.Map;
 
 final class ExecutionProviderROCMConfig extends ExecutionProviderConfig {
@@ -17,7 +16,7 @@ final class ExecutionProviderROCMConfig extends ExecutionProviderConfig {
     }
 
     @Override
-    final void appendToSessionOptions(MemorySession memorySession, ApiImpl api, MemoryAddress sessionOptions) {
+    final void appendToSessionOptions(Arena memorySession, ApiImpl api, MemorySegment sessionOptions) {
         MemorySegment config = OrtROCMProviderOptions.allocate(memorySession);
         copyInteger("device_id", config, OrtROCMProviderOptions::device_id$set);
         copyInteger("miopen_conv_exhaustive_search", config, OrtROCMProviderOptions::miopen_conv_exhaustive_search$set);
@@ -33,6 +32,6 @@ final class ExecutionProviderROCMConfig extends ExecutionProviderConfig {
                 "tunable_op_max_tuning_duration_ms",
                 config,
                 OrtROCMProviderOptions::tunable_op_max_tuning_duration_ms$set);
-        api.checkStatus(api.SessionOptionsAppendExecutionProvider_ROCM.apply(sessionOptions, config.address()));
+        api.checkStatus(api.SessionOptionsAppendExecutionProvider_ROCM.apply(sessionOptions, config));
     }
 }
