@@ -7,7 +7,6 @@ package com.jyuzawa.onnxruntime;
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_all_h.C_CHAR;
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_all_h.C_POINTER;
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SegmentAllocator;
 import java.util.Arrays;
@@ -19,7 +18,7 @@ final class OnnxTensorStringImpl extends OnnxTensorImpl {
 
     private final String[] buffer;
 
-    OnnxTensorStringImpl(TensorInfoImpl tensorInfo, ValueContext valueContext, MemoryAddress ortValueAddress) {
+    OnnxTensorStringImpl(TensorInfoImpl tensorInfo, ValueContext valueContext, MemorySegment ortValueAddress) {
         super(tensorInfo, valueContext);
         this.buffer = new String[Math.toIntExact(tensorInfo.getElementCount())];
         if (ortValueAddress != null) {
@@ -31,9 +30,9 @@ final class OnnxTensorStringImpl extends OnnxTensorImpl {
                 long length = api.extractLong(
                         segmentAllocator, out -> api.GetStringTensorElementLength.apply(ortValueAddress, index, out));
                 // add a byte for the null termination
-                MemorySegment output = segmentAllocator.allocateArray(C_CHAR, length + 1);
-                api.checkStatus(api.GetStringTensorElement.apply(ortValueAddress, length, index, output.address()));
-                buffer[i] = output.getUtf8String(0);
+                MemorySegment output = segmentAllocator.allocate(C_CHAR, length + 1);
+                api.checkStatus(api.GetStringTensorElement.apply(ortValueAddress, length, index, output));
+                buffer[i] = output.getString(0);
             }
         }
     }
@@ -49,23 +48,23 @@ final class OnnxTensorStringImpl extends OnnxTensorImpl {
     }
 
     @Override
-    public MemoryAddress toNative() {
+    public MemorySegment toNative() {
         int numOutputs = buffer.length;
         ApiImpl api = valueContext.api();
         SegmentAllocator allocator = valueContext.segmentAllocator();
-        MemorySegment stringArray = allocator.allocateArray(C_POINTER, numOutputs);
+        MemorySegment stringArray = allocator.allocate(C_POINTER, numOutputs);
         for (int i = 0; i < numOutputs; i++) {
-            stringArray.setAtIndex(C_POINTER, i, allocator.allocateUtf8String(buffer[i]));
+            stringArray.setAtIndex(C_POINTER, i, allocator.allocateFrom(buffer[i]));
         }
-        MemoryAddress tensor = api.create(
+        MemorySegment tensor = api.create(
                 allocator,
                 out -> api.CreateTensorAsOrtValue.apply(
                         valueContext.ortAllocatorAddress(),
-                        tensorInfo.shapeData.address(),
+                        tensorInfo.shapeData,
                         tensorInfo.getShape().size(),
                         tensorInfo.getType().getNumber(),
                         out));
-        api.checkStatus(api.FillStringTensor.apply(tensor, stringArray.address(), numOutputs));
+        api.checkStatus(api.FillStringTensor.apply(tensor, stringArray, numOutputs));
         return tensor;
     }
 
