@@ -8,30 +8,30 @@ import static java.lang.foreign.ValueLayout.*;
 
 import java.lang.foreign.*;
 
+/**
+ * {@snippet :
+ * struct OrtCustomHandleType* (*OrtCustomCreateThreadFn)(void* ort_custom_thread_creation_options,void (*ort_thread_worker_fn)(void*),void* ort_worker_fn_param);
+ * }
+ */
 public interface OrtCustomCreateThreadFn {
 
-    java.lang.foreign.Addressable apply(
-            java.lang.foreign.MemoryAddress ort_custom_thread_creation_options,
-            java.lang.foreign.MemoryAddress ort_thread_worker_fn,
-            java.lang.foreign.MemoryAddress ort_worker_fn_param);
+    java.lang.foreign.MemorySegment apply(
+            java.lang.foreign.MemorySegment ort_custom_thread_creation_options,
+            java.lang.foreign.MemorySegment ort_thread_worker_fn,
+            java.lang.foreign.MemorySegment ort_worker_fn_param);
 
-    static MemorySegment allocate(OrtCustomCreateThreadFn fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(
-                OrtCustomCreateThreadFn.class, fi, constants$0.OrtCustomCreateThreadFn$FUNC, session);
+    static MemorySegment allocate(OrtCustomCreateThreadFn fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$15.const$1, fi, constants$15.const$0, scope);
     }
 
-    static OrtCustomCreateThreadFn ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _ort_custom_thread_creation_options,
-                java.lang.foreign.MemoryAddress _ort_thread_worker_fn,
-                java.lang.foreign.MemoryAddress _ort_worker_fn_param) -> {
+    static OrtCustomCreateThreadFn ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _ort_custom_thread_creation_options,
+                java.lang.foreign.MemorySegment _ort_thread_worker_fn,
+                java.lang.foreign.MemorySegment _ort_worker_fn_param) -> {
             try {
-                return (java.lang.foreign.Addressable)
-                        (java.lang.foreign.MemoryAddress) constants$1.OrtCustomCreateThreadFn$MH.invokeExact(
-                                (Addressable) symbol,
-                                (java.lang.foreign.Addressable) _ort_custom_thread_creation_options,
-                                (java.lang.foreign.Addressable) _ort_thread_worker_fn,
-                                (java.lang.foreign.Addressable) _ort_worker_fn_param);
+                return (java.lang.foreign.MemorySegment) constants$15.const$2.invokeExact(
+                        symbol, _ort_custom_thread_creation_options, _ort_thread_worker_fn, _ort_worker_fn_param);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
