@@ -8,37 +8,35 @@ import static java.lang.foreign.ValueLayout.*;
 
 import java.lang.foreign.*;
 
+/**
+ * {@snippet :
+ * void (*OrtLoggingFunction)(void* param,enum OrtLoggingLevel severity,char* category,char* logid,char* code_location,char* message);
+ * }
+ */
 public interface OrtLoggingFunction {
 
     void apply(
-            java.lang.foreign.MemoryAddress param,
+            java.lang.foreign.MemorySegment param,
             int severity,
-            java.lang.foreign.MemoryAddress category,
-            java.lang.foreign.MemoryAddress logid,
-            java.lang.foreign.MemoryAddress code_location,
-            java.lang.foreign.MemoryAddress message);
+            java.lang.foreign.MemorySegment category,
+            java.lang.foreign.MemorySegment logid,
+            java.lang.foreign.MemorySegment code_location,
+            java.lang.foreign.MemorySegment message);
 
-    static MemorySegment allocate(OrtLoggingFunction fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(OrtLoggingFunction.class, fi, constants$0.OrtLoggingFunction$FUNC, session);
+    static MemorySegment allocate(OrtLoggingFunction fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$2.const$3, fi, constants$2.const$2, scope);
     }
 
-    static OrtLoggingFunction ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _param,
+    static OrtLoggingFunction ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _param,
                 int _severity,
-                java.lang.foreign.MemoryAddress _category,
-                java.lang.foreign.MemoryAddress _logid,
-                java.lang.foreign.MemoryAddress _code_location,
-                java.lang.foreign.MemoryAddress _message) -> {
+                java.lang.foreign.MemorySegment _category,
+                java.lang.foreign.MemorySegment _logid,
+                java.lang.foreign.MemorySegment _code_location,
+                java.lang.foreign.MemorySegment _message) -> {
             try {
-                constants$0.OrtLoggingFunction$MH.invokeExact(
-                        (Addressable) symbol,
-                        (java.lang.foreign.Addressable) _param,
-                        _severity,
-                        (java.lang.foreign.Addressable) _category,
-                        (java.lang.foreign.Addressable) _logid,
-                        (java.lang.foreign.Addressable) _code_location,
-                        (java.lang.foreign.Addressable) _message);
+                constants$2.const$4.invokeExact(symbol, _param, _severity, _category, _logid, _code_location, _message);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
